# saskia_mediapipe

./: .gitignore  AGENTS.md  README.md  main.py  pose_draw.spec  pose_video.py  pyproject.toml
assets/: app_icon.icns
pose_draw/: app.py  brush.py  constants.py  drawing_layer.py  mediapipe_utils.py  processor.py  ui.py
video/: output_paths.json
